@@ -336,9 +336,11 @@ public class Whitelist {
     }
 
     private boolean testValidProtocol(Element el, Attribute attr, Set<Protocol> protocols) {
-        // resolve relative urls to abs, and optionally update the attribute so output html has abs.
+        // try to resolve relative urls to abs, and optionally update the attribute so output html has abs.
         // rels without a baseuri get removed
         String value = el.absUrl(attr.getKey());
+        if (value.length() == 0)
+            value = attr.getValue(); // if it could not be made abs, run as-is to allow custom unknown protocols
         if (!preserveRelativeLinks)
             attr.setValue(value);
         
