@@ -9,6 +9,9 @@ jsoup changelog
  * Updated the Cleaner and whitelists to optionally preserve related links in elements, instead of converting them
    to absolute links.
 
+ * Updated the Cleaner to support custom allowed protocols such as "cid:" and "data:".
+   <https://github.com/jhy/jsoup/issues/127>
+
  * Fixed handling of null characters within comments.
    <https://github.com/jhy/jsoup/issues/121>
 
